api/check.txt
python :   File "<string>", line 1
위치 C:\Users\MSI\AppData\Local\Temp\ps-script-953185c9-2a80-46cf-ba5e-293b5f91987d.ps1:89 문자:44
+ ... ro.ai\api"; python -c "import json; d=json.load(open('all_stages.json ...
+                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 1:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    import json; d=json.load(open('all_stages.json','r',encoding='utf-8')); [print(f'Stage {s[" stage\]}:
                                                                                              ^
SyntaxError: unterminated string literal (detected at line 1)
